# pontis

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: prepare-release.yml  promote-release.yml  publish-release.yml
docs/: CONFIG.ja.md  CONFIG.md  GIT_INTEGRATION.ja.md  GIT_INTEGRATION.md  README.ja.md
src/: lib.rs  main.rs
src/application/: mod.rs  settings.rs
src/application/app/: access.rs  init.rs  mod.rs
src/application/app/actions/: edit.rs  edit_support.rs  filter.rs  io.rs  merge.rs  mod.rs  reload.rs  save.rs  save_support.rs
src/application/app/history/: mod.rs  store.rs
src/application/app/loading/: mod.rs  prefetch.rs  tasks.rs
src/application/ports/: mod.rs
src/bootstrap/: cli.rs  config.rs  mod.rs  targets.rs  tests.rs
src/domain/: mod.rs
src/domain/diff/: compute.rs  file_ops.rs  lines.rs  mod.rs  policy.rs
src/domain/model/: diff_content.rs  diff_file.rs  hunk.rs  loaded_diff.rs  mod.rs  roots.rs  status.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs  parse.rs  resolve.rs
src/infrastructure/fs_scan/: build.rs  mod.rs  reader.rs
src/infrastructure/git_scan/: command.rs  mod.rs
src/infrastructure/syntax_assets/: mod.rs
src/infrastructure/text/: mod.rs
src/presentation/: mod.rs
src/presentation/driver/: loop_core.rs  mod.rs
src/presentation/syntax/: mod.rs  painter.rs  theme.rs
src/presentation/ui/: file_list.rs  mod.rs  scroll.rs  style.rs
tests/: directory_diff.rs  file_mode.rs  input_validation.rs
tests/fixtures/: README.ja.md  README.md
tests/support/: mod.rs
(+57 files in other folders)
