[package]
name = "pontis"
version = "0.1.0"
edition = "2024"
default-run = "pontis"
description = "Terminal UI diff and merge tool for files, directories, and Git comparisons"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nakkiy/pontis"
keywords = ["diff", "merge", "tui", "git", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pontis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
similar = "2.7"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
toml = "0.8"
walkdir = "2.5"
